--- a/index.html
+++ b/index.html
@@ -35,14 +35,44 @@
 
     <header class="header section">
         <h1 class="header__heading">Tropical Paradise</h1>
-        <p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur,
-            consequuntur.</p>
+        <p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur,consequuntur.</p>
         <a href="#offers" class="header__btn btn-special-animation">Poznaj oferte</a>
         <div class="white-block white-block-left"></div>
 
     </header>
 
+    <main class="main">
+        <section class="dreams section-padding section white-section">
+            <div class="wrapper">
+                <h2 class="section-heading">Spełniaj marzenia</h2>
+            
 
+            <div class="dreams__box">
+                <div class="dreams__box-img">
+                    <img src="./img/paradise-598201_640.jpg" alt="domki nad oceanem" class="dreams__img">
+                </div>
+                <div class="dreams__box-text">
+                    <h3 class="dreams__title">Wymarzone wakacje</h3>
+                    <p class="dreams__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus iure
+                        nisi quibusdam rerum, quidem beatae ducimus deleniti, nulla libero delectus illo dolorem non
+                        maiores esse soluta mollitia blanditiis at saepe.</p>
+                </div>
+            </div>
+
+            <div class="dreams__box">
+                <div class=" dreams__box-img dreams__box-img--right">
+                    <img src="./img/bora-bora-3023437_640.jpg" alt="domki nad oceanem na tle góry" class="dreams__img">
+                </div>
+                <div class="dreams__box-text dreams__box-text--right">
+                    <h3 class="dreams__title">Niezapomniane przygody</h3>
+                    <p class="dreams__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus iure
+                        nisi quibusdam rerum, quidem beatae ducimus deleniti, nulla libero delectus illo dolorem non
+                        maiores esse soluta mollitia blanditiis at saepe.</p>
+                </div>
+            </div>
+        </div>
+        </section>
+    </main>
 
     <script src="js/main.js"></script>
 </body>
