--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;700&display=swap"
         rel="stylesheet">
-
     <script src="https://kit.fontawesome.com/33a6bb9604.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./sass/main.css">
 </head>
 
@@ -167,40 +167,160 @@
                         <div class="offers__option-info">
                             <h3 class="offers__option-heading">Wyjazd z dziećmi</h3>
 
-                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus ipsa nesciunt sunt ad, voluptate fugit! Dolorem illo voluptas voluptates ex.</p>
+                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Possimus ipsa nesciunt sunt ad, voluptate fugit! Dolorem illo voluptas voluptates ex.
+                            </p>
                             <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
-                    
+
                     <div class="offers__option">
-                        <img src="./img/off2.jpg" alt="kumple na brzegu oceanu" class="offers__option-img offers__option-img--right">
+                        <img src="./img/off2.jpg" alt="kumple na brzegu oceanu"
+                            class="offers__option-img offers__option-img--right">
                         <div class="offers__option-info">
                             <h3 class="offers__option-heading">Wypad z kumplami</h3>
 
-                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus ipsa nesciunt sunt ad, voluptate fugit! Dolorem illo voluptas voluptates ex.</p>
+                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Possimus ipsa nesciunt sunt ad, voluptate fugit! Dolorem illo voluptas voluptates ex.
+                            </p>
                             <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
-                    
+
                     <div class="offers__option">
                         <img src="./img/off3.jpg" alt="klimatyczna kolacja na plaży" class="offers__option-img">
                         <div class="offers__option-info">
                             <h3 class="offers__option-heading">Tylko we dwoje</h3>
 
-                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus ipsa nesciunt sunt ad, voluptate fugit! Dolorem illo voluptas voluptates ex.</p>
+                            <p class="offers__option-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Possimus ipsa nesciunt sunt ad, voluptate fugit! Dolorem illo voluptas voluptates ex.
+                            </p>
                             <p class="offers__option-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <button class="offers__option-btn btn-special-animation">Wybierz</button>
                         </div>
                     </div>
-
-
                 </div>
+            </div>
+        </section>
+
+        <section class="reviews section-padding section white-section" id="reviews">
+            <h2 class="section-heading">opinie</h2>
+            <div class="wrapper">
+                <div class="reviews__boxes">
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="img/opinion1.jpg" alt="kobieta o ciemnej karnacji">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, impedit eaque? Tenetur
+                                nihil ipsam dolore possimus laboriosam unde, reprehenderit dolorum!
+                            </p>
+                            <strong>Anna Nowak</strong>
+                        </div>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="img/opinion2.jpg" alt="Uśmiechnięty mężczyzna w okólarach przeciwsłonecznych">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, impedit eaque? Tenetur
+                                nihil ipsam dolore possimus laboriosam unde, reprehenderit dolorum!
+                            </p>
+                            <strong>Jan Kowalski</strong>
+                        </div>
+                    </div>
+                    <div class="reviews__box">
+                        <div class="reviews__box-img">
+                            <img src="img/opinion3.jpg" alt="kobieta o blond włosach">
+                        </div>
+                        <div class="reviews__box-info">
+                            <div class="reviews__box-quote"><i class="fas fa-quote-right"></i></div>
+                            <p class="reviews__box-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, impedit eaque? Tenetur
+                                nihil ipsam dolore possimus laboriosam unde, reprehenderit dolorum!
+                            </p>
+                            <strong>Joanna Nos</strong>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact section-padding section white-section">
+            <div class="white-block white-block-right"></div>
+            <div class="white-block white-block-left"></div>
+            <h2 class="section-heading">Kontakt</h2>
+            <div class="wrapper">
+                <form class="contact__form">
+
+                    <div class="contact__form-top">
+                        <label for="name" class="contact__form-label">Imie i nazwisko:</label>
+                        <input type="text" class="contact__form-input" id="name">
+
+                        <label for="email" class="contact__form-label">Adres e-mail</label>
+                        <input type="text" class="contact__form-input" id="email">
+                    </div>
+
+                    <label for="msg" class="contact__form-label">Wiadomość</label>
+                    <textarea id="msg" class="contact__form-textarea"></textarea>
+                    <button type="submit" class="contact__form-btn btn-special-animation">Wyślij</button>
+                </form>
             </div>
         </section>
     </main>
 
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__boxes">
+
+                <div class="footer__box">
+                    <h3 class="footer__box-title"><i class="fas fa-kiwi-bird"></i> TP Co.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi et, commodi dolore laborum quaerat
+                        voluptatibus eos dignissimos repellendus! Atque, nulla?</p>
+                    <div class="footer__box-social">
+                        <a href="#" class="footer__box-link"><i class="fab fa-twitter-square"></i></a>
+                        <a href="#" class="footer__box-link"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="footer__box-link"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="footer__box footer__box-desktop">
+                    <h3 class="footer__box-title">Wyspy</h3>
+                    <ul class="footer__box-list">
+                        <li class="footer__box-list-item"><a href="#">Wyspa Tiki Taki</a></li>
+                        <li class="footer__box-list-item"><a href="#">Wyspa Toca Toca</a></li>
+                        <li class="footer__box-list-item"><a href="#">Wyspa Nobu</a></li>
+                        <li class="footer__box-list-item"><a href="#">Pozostałe wyspy</a></li>
+                    </ul>
+                </div>
+                <div class="footer__box footer__box-desktop">
+                    <h3 class="footer__box-title">O firmie</h3>
+                    <ul class="footer__box-list">
+                        <li class="footer__box-list-item"><a href="#">O nas</a></li>
+                        <li class="footer__box-list-item"><a href="#">Zarząd</a></li>
+                        <li class="footer__box-list-item"><a href="#">Kariera</a></li>
+                        <li class="footer__box-list-item"><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <p class="footer__bottom-text"> &copy; <span class="footer_year"></span> Tropical Paradise</p>
+
+
+    </footer>
+
+
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/slick.js"></script>
     <script src="js/main.js"></script>
 </body>
 
